# LLVM_Frontend_Opt

./: CMakeLists.txt  FileTestForPass.sh  compile_for_github.sh  format-all.sh
src/lib/: opt.cpp
src/lib/opt/: Alloca2RegOpt.cpp  CMakeLists.txt  GVoptPass.cpp  StackAllocPass.cpp  arith_opt.cpp  branch_opt.cpp  cfg_opt.cpp  free_opt.cpp  functioninline_opt.cpp  hello_world.cpp  hello_world.h  icmp_propagation.cpp  instruction_combine.cpp  loop_unroll_full_opt.cpp  make_same_operand.cpp  opt_passes.h  rcall_opt.cpp  reassociation_pass.cpp  vectorization_opt.cpp
test/: CMakeLists.txt
test/test_GV/: GVoptPass@1.ll  GVoptPass@2.ll  GVoptPass@3.ll
test/test_arith/: arith_opt@1.ll  arith_opt@2.ll  arith_opt@3.ll  arith_opt@4.ll  arith_opt@5.ll
test/test_branch/: branch_opt@1.ll  branch_opt@2.ll  branch_opt@3.ll
test/test_cfg/: cfg_opt@1.ll  cfg_opt@2.ll  cfg_opt@3.ll
test/test_free/: free_opt@1.ll  free_opt@2.ll  free_opt@3.ll
test/test_heaptostack/: StackAllocPass@1.ll  StackAllocPass@2.ll  StackAllocPass@3.ll  StackAllocPass@4.ll
test/test_hello/: hello_world@1.ll
test/test_icmpprop/: icmp_propagation@1.ll  icmp_propagation@2.ll  icmp_propagation@3.ll
test/test_inline/: functioninline_opt@1.ll  functioninline_opt@2.ll  functioninline_opt@3.ll
test/test_instruction_combine/: instruction_combine@1.ll  instruction_combine@2.ll  instruction_combine@3.ll
test/test_loop_unroll_full/: loop_unroll_full_opt@1.ll  loop_unroll_full_opt@2.ll  loop_unroll_full_opt@3.ll  loop_unroll_full_opt@4.ll  loop_unroll_full_opt@5.ll  loop_unroll_full_opt@6.ll
test/test_make_same_operand/: make_same_operand@1.ll  make_same_operand@2.ll  make_same_operand@3.ll
test/test_mem2reg/: Alloca2RegOpt@1.ll  Alloca2RegOpt@2.ll  Alloca2RegOpt@3.ll
test/test_rcall/: rcall_opt@1.ll  rcall_opt@2.ll  rcall_opt@3.ll
test/test_reassociation/: reassociation_pass@1.ll  reassociation_pass@2.ll  reassociation_pass@3.ll
test/test_vectorization/: vectorization_opt@1.ll  vectorization_opt@2.ll  vectorization_opt@3.ll
